# goldie

./: .gitignore  package-lock.json
host/: .env  bun.lockb  package.json
host/src/: App.tsx  index.css
host/src/api/: api-types.ts  queryKeys.ts
host/src/api/mutations/: usePlayNextSong.ts
host/src/api/queries/: useCurrentSong.ts  useKey.ts
host/src/api/sse/: hooks.ts  types.ts  useEventSource.ts
host/src/components/qr-code/: component.tsx
host/src/components/queue/: component.tsx
host/src/components/video-player/: component.tsx
host/src/utils/: format.ts
server/: Cargo.toml
server/src/: main.rs  queue.rs  router.rs  state.rs  test.rs  ytdlp.rs
server/src/actors/: request.rs  song_coordinator.rs  video_downloader.rs  videodl.rs
server/src/lib/: dash_processor.rs  file_storage.rs  os.rs  pitch_shifter.rs  test.rs  video_extractor.rs  xml_mpd.rs  yt_downloader.rs  yt_searcher.rs
server/src/routes/: admin.rs  karaoke.rs  streaming.rs  sys.rs  test.rs
