[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-channel = "2.3.1"
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
futures-util = "0.3.31"
home = "0.5.11"
local-ip-address = "0.6.3"
quick-xml = { version = "0.37.2", features = ["serialize"] }
rand = "0.8.5"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
thiserror = { version = "2.0.11", features = ["std"] }
tokio = { version = "1.42.0", features = ["fs", "io-std", "io-util", "process", "rt-multi-thread"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.11.0", features = ["fast-rng", "v4"] }
